--- a/www/index.html
+++ b/www/index.html
@@ -1,7 +1,22 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>bomberman</title>
+	<title>Bomberman</title>
+	<style>
+		* {
+				margin: 0;
+		}
+		html,
+		body {
+				width: 100%;
+				height: 100%;
+				overflow: hidden;
+				background: green;
+		}
+		canvas {
+				display: block;
+		}
+</style>
 </head>
 <body>
 	<script src="main.js"></script>
